--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -31,6 +31,11 @@
             "Contao\\CoreBundle\\": "src/"
         }
     },
+    "extra": {
+        "branch-alias": {
+            "dev-develop": "4.0.x-dev"
+        }
+    },
     "prefer-stable": true,
     "minimum-stability": "dev"
 }
