--- a/faq-bundle/composer.json
+++ b/faq-bundle/composer.json
@@ -18,5 +18,10 @@
         "psr-4": {
             "Contao\\FaqBundle\\": "src/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-develop": "4.0.x-dev"
+        }
     }
 }
