--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -11,9 +11,9 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "leafo/lessphp": "~0.4",
         "leafo/scssphp": "~0.1",
         "michelf/php-markdown": "~1.4",
+        "oyejorge/less.php": "~1.7",
         "phpspec/php-diff": "~1.0",
         "simplepie/simplepie": "~1.3",
         "swiftmailer/swiftmailer": "~5.2",
