--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -54,16 +54,9 @@ services:
         tags:
             - { name: data_collector, template: "ContaoCoreBundle:Collector:contao", id: "contao" }
 
-    backend_user_provider:
-        class: Contao\CoreBundle\Security\User\BackendUserProvider
+    contao_user_provider:
+        class: Contao\CoreBundle\Security\User\ContaoUserProvider
 
-    frontend_user_provider:
-        class: Contao\CoreBundle\Security\User\FrontendUserProvider
-
-    backend_authenticator:
-        class: Contao\CoreBundle\Security\BackendAuthenticator
-        arguments: ["@backend_user_provider"]
-
-    frontend_authenticator:
-        class: Contao\CoreBundle\Security\FrontendAuthenticator
-        arguments: ["@frontend_user_provider"]
+    contao_authenticator:
+        class: Contao\CoreBundle\Security\ContaoAuthenticator
+        arguments: ["@contao_user_provider"]
