--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -17,8 +17,9 @@
         "phpspec/php-diff": "~1.0",
         "simplepie/simplepie": "~1.3",
         "swiftmailer/swiftmailer": "~5.2",
-        "symfony/finder": "~2.5",
-        "symfony/framework-bundle": "~2.5",
+        "symfony/console": "~2.6",
+        "symfony/finder": "~2.6",
+        "symfony/framework-bundle": "~2.6",
         "tecnick.com/tcpdf": "~6.0",
         "true/punycode": "~1.0"
     },
