--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -23,7 +23,8 @@
         "symfony/finder": "~2.6",
         "symfony/framework-bundle": "~2.6",
         "tecnick.com/tcpdf": "~6.0",
-        "true/punycode": "~1.0"
+        "true/punycode": "~1.0",
+        "doctrine/doctrine-bundle": "~1.3"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5"
