--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
+        "doctrine/doctrine-bundle": "~1.3",
         "leafo/scssphp": "~0.1",
         "michelf/php-markdown": "~1.4",
         "oyejorge/less.php": "~1.7",
