[Core] We dont support a folder-like URL for backend anymore

--- a/core-bundle/src/Resources/config/routing.yml
+++ b/core-bundle/src/Resources/config/routing.yml
@@ -1,11 +1,8 @@
 contao_backend:
-    path: /contao{_trailing_slash}
+    path: /contao
     defaults:
         _controller: ContaoCoreBundle:Backend:main
-        _trailing_slash: /
         _scope: backend
-    requirements:
-        _trailing_slash: /?
 
 contao_backend_login:
     path: /contao/login
