[Core] Inject addToUrl and urlSuffix via dependency injection.
This also renders above said values in localconfig.php useless as they
are now parameters.

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -50,6 +50,9 @@ services:
 
     contao.routing.frontend_loader:
         class: Contao\CoreBundle\Routing\FrontendLoader
+        arguments:
+            - "%add_language_to_url%"
+            - "%url_suffix%"
         tags:
             - { name: routing.bundle_loader, priority: -250 }
 
