[Core] Fix the CS and refactor a few things

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -49,14 +49,15 @@ services:
         tags:
             - { name: routing.bundle_loader, priority: -250 }
 
-    data_collector.contao:
-        class: Contao\CoreBundle\DataCollector\ContaoDataCollector
-        tags:
-            - { name: data_collector, template: "ContaoCoreBundle:Collector:contao", id: "contao" }
+    contao.security.authenticator:
+        class: Contao\CoreBundle\Security\ContaoAuthenticator
+        arguments:
+            - "@contao.security.user_provider"
 
     contao.security.user_provider:
         class: Contao\CoreBundle\Security\User\ContaoUserProvider
 
-    contao.security.authenticator:
-        class: Contao\CoreBundle\Security\ContaoAuthenticator
-        arguments: ["@contao.security.user_provider"]
+    data_collector.contao:
+        class: Contao\CoreBundle\DataCollector\ContaoDataCollector
+        tags:
+            - { name: data_collector, template: "ContaoCoreBundle:Collector:contao", id: "contao" }
