[Core] Add the dependency_path in the .scrutinizer.yml file

--- a/core-bundle/.scrutinizer.yml
+++ b/core-bundle/.scrutinizer.yml
@@ -3,7 +3,9 @@ tools:
         timeout: 600
     php_sim: true
     php_pdepend: true
-    php_analyzer: true
+    php_analyzer:
+        dependency_paths: [contao/]
+    sensiolabs_security_checker: true
 
 filter:
     paths: [src/*]
