[Core] Reset the Scrutinizer settings

--- a/core-bundle/.scrutinizer.yml
+++ b/core-bundle/.scrutinizer.yml
@@ -3,8 +3,7 @@ tools:
         timeout: 600
     php_sim: true
     php_pdepend: true
-    php_analyzer:
-        dependency_paths: [contao/]
+    php_analyzer: true
     sensiolabs_security_checker: true
 
 filter:
