--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -51,11 +51,13 @@ services:
 
     contao.security.authenticator:
         class: Contao\CoreBundle\Security\ContaoAuthenticator
+        public: false
         arguments:
             - "@contao.security.user_provider"
 
     contao.security.user_provider:
         class: Contao\CoreBundle\Security\User\ContaoUserProvider
+        public: false
 
     contao.web_profiler.data_collector:
         class: Contao\CoreBundle\DataCollector\ContaoDataCollector
