[Core] Fix accessing the install tool and setting the website path

--- a/core-bundle/src/Resources/config/security.yml
+++ b/core-bundle/src/Resources/config/security.yml
@@ -8,6 +8,10 @@ security:
             pattern: ^/(_(profiler|wdt|error)|css|images|js)/
             security: false
 
+        install:
+            pattern: ^/contao/install
+            security: false
+
         backend:
             pattern: ^/contao
             stateless: true
