[Core] Add default locale to prevent query parameter

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -55,6 +55,7 @@ services:
         arguments:
             - "%prepend_locale%"
             - "%url_suffix%"
+            - "%locale%"
         tags:
             - { name: routing.bundle_loader, priority: -250 }
 
