[Core] The Composer --dev option has been deprecated, so remove it

--- a/core-bundle/.travis.yml
+++ b/core-bundle/.travis.yml
@@ -9,7 +9,7 @@ sudo: false
 
 install:
     - composer self-update
-    - composer install --prefer-source --dev
+    - composer install --prefer-source
 
 script:
     - ./vendor/bin/phpunit --coverage-clover=coverage.clover
