--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -35,21 +35,6 @@ services:
             # Priority must be lower than the one of the Contao initialize system listener.
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 28 }
 
-    contao.routing.backend_loader:
-        parent: routing.bundle_resource_loader
-        arguments:
-            - "@@ContaoCoreBundle/Resources/config/routing.yml"
-        tags:
-            - { name: routing.bundle_loader, priority: 200 }
-
-    contao.routing.dev_loader:
-        parent: routing.bundle_resource_loader
-        arguments:
-            - "@@ContaoCoreBundle/Resources/config/routing_dev.yml"
-            - ["dev", "test"]
-        tags:
-            - { name: routing.bundle_loader }
-
     contao.routing.frontend_loader:
         class: Contao\CoreBundle\Routing\FrontendLoader
         arguments:
@@ -57,7 +42,7 @@ services:
             - "%url_suffix%"
             - "%locale%"
         tags:
-            - { name: routing.bundle_loader, priority: -250 }
+            - { name: routing.loader }
 
     contao.security.authenticator:
         class: Contao\CoreBundle\Security\ContaoAuthenticator
