[Core] Add "replaces contao/core" to the composer.json file

--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -29,6 +29,9 @@
     "require-dev": {
         "phpunit/phpunit": "~4.5"
     },
+    "replace": {
+        "contao/core": "self.version"
+    },
     "autoload": {
         "psr-4": {
             "Contao\\CoreBundle\\": "src/"
