--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -27,7 +27,8 @@
         "twig/twig": "~1.12,>=1.12.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.5"
+        "phpunit/phpunit": "~4.5",
+        "composer/composer": "dev-master"
     },
     "replace": {
         "contao/core": "self.version"
