[Core] Use the new container parameters to instantiate the FrontendLoader class

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -38,8 +38,7 @@ services:
     contao.routing.frontend_loader:
         class: Contao\CoreBundle\Routing\FrontendLoader
         arguments:
-            - "%prepend_locale%"
-            - "%url_suffix%"
+            - "@service_container"
             - "%locale%"
         tags:
             - { name: routing.loader }
