[Core] Add a Composer conflict entry and remove the autoload.json file

--- a/core-bundle/composer.json
+++ b/core-bundle/composer.json
@@ -30,8 +30,8 @@
         "phpunit/phpunit": "~4.5",
         "composer/composer": "dev-master"
     },
-    "replace": {
-        "contao/core": "self.version"
+    "conflict": {
+        "contao/core": "*"
     },
     "autoload": {
         "psr-4": {
