[Core] Symfony Session WIP

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -18,6 +18,7 @@ services:
         class: Contao\CoreBundle\EventListener\InitializeSystemListener
         arguments:
             - "@router"
+            - "@security.csrf.token_manager"
             - "%kernel.root_dir%"
         calls:
             - [setContainer, ["@service_container"]]
