[Core] Make the Image class tests PHP 5.4 and 5.5 compatible

--- a/core-bundle/phpunit.xml.dist
+++ b/core-bundle/phpunit.xml.dist
@@ -16,6 +16,9 @@
     <filter>
         <whitelist>
             <directory>./src</directory>
+            <exclude>
+                <directory>./src/Resources</directory>
+            </exclude>
         </whitelist>
     </filter>
 </phpunit>
