--- a/core-bundle/.scrutinizer.yml
+++ b/core-bundle/.scrutinizer.yml
@@ -3,7 +3,8 @@ tools:
         timeout: 600
     php_sim: true
     php_pdepend: true
-    php_analyzer: true
+    php_analyzer:
+        dependency_paths: [src/Resources/contao/library/]
     sensiolabs_security_checker: true
 
 filter:
