--- a/core-bundle/.scrutinizer.yml
+++ b/core-bundle/.scrutinizer.yml
@@ -4,7 +4,9 @@ tools:
     php_sim: true
     php_pdepend: true
     php_analyzer:
-        dependency_paths: [src/Resources/contao/library/]
+        dependency_paths:
+            - src/Resources/contao/classes/
+            - src/Resources/contao/library/
     sensiolabs_security_checker: true
 
 filter:
