[Core] Added an AttributeBagMirror class to map direct legacy $_SESSION['FE_DATA'] and $_SESSION['BE_DATA'] access

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -19,6 +19,7 @@ services:
         arguments:
             - "@router"
             - "@security.csrf.token_manager"
+            - "@session"
             - "%kernel.root_dir%"
         calls:
             - [setContainer, ["@service_container"]]
