--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -42,7 +42,8 @@ services:
         arguments:
             - "@session"
         tags:
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 64 }
+            - { name: kernel.event_listener, event: kernel.request, method: registerContaoAttributeBags, priority: 64 }
+            - { name: kernel.event_listener, event: console.command, method: registerContaoAttributeBags, priority: 64 }
 
     contao.listener.toggle_view:
         class: Contao\CoreBundle\EventListener\ToggleViewListener
