[Core] We must use container scope and not request parameter

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -17,6 +17,8 @@ services:
         arguments:
             - "@router"
             - "%kernel.root_dir%"
+        calls:
+            - [setContainer, ["@service_container"]]
         tags:
             # Priority must be higher than any other listener that uses the Contao framework and lower than the
             # priority of the route_listener, which defaults to 32.
