--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -9,7 +9,9 @@ services:
         arguments:
             - "@service_container"
         tags:
-            - { name: kernel.event_listener, event: kernel.controller, method: onKernelRequest, priority: 31 }
+            # Priority must be higher than any other listener that uses the Contao framework and lower than the
+            # priority of the route_listener, which defaults to 32.
+            - { name: kernel.event_listener, event: kernel.controller, method: onKernelRequest, priority: 30 }
             - { name: kernel.event_listener, event: kernel.finish_request, method: onKernelFinishRequest, priority: -254 }
 
     contao.listener.initialize_system:
@@ -21,21 +23,21 @@ services:
             - [setContainer, ["@service_container"]]
         tags:
             # Priority must be higher than any other listener that uses the Contao framework and lower than the
-            # priority of the route_listener, which defaults to 32.
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 30 }
+            # priority of the route_listener and contao.listener.container_scope
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 28 }
             - { name: kernel.event_listener, event: console.command, method: onConsoleCommand }
 
     contao.listener.output_from_cache:
         class: Contao\CoreBundle\EventListener\OutputFromCacheListener
         tags:
             # Priority must be lower than the one of the Contao initialize system listener.
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 26 }
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 24 }
 
     contao.listener.toggle_view:
         class: Contao\CoreBundle\EventListener\ToggleViewListener
         tags:
             # Priority must be lower than the one of the Contao initialize system listener.
-            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 28 }
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 26 }
 
     contao.resource_provider:
         class: Contao\CoreBundle\HttpKernel\Bundle\ResourceProvider
