--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -23,7 +23,7 @@ services:
             - [setContainer, ["@service_container"]]
         tags:
             # Priority must be higher than any other listener that uses the Contao framework and lower than the
-            # priority of the route_listener and contao.listener.container_scope
+            # priority of the route_listener and the container_scope listener.
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 28 }
             - { name: kernel.event_listener, event: console.command, method: onConsoleCommand }
 
@@ -32,7 +32,7 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
         tags:
-            # Priority must be lower than the one of the Contao initialize system listener.
+            # Priority must be lower than the one of the toggle_view listener.
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 24 }
 
     contao.listener.toggle_view:
@@ -40,7 +40,7 @@ services:
         calls:
             - [setContainer, ["@service_container"]]
         tags:
-            # Priority must be lower than the one of the Contao initialize system listener.
+            # Priority must be lower than the one of the initialize_system listener.
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 26 }
 
     contao.resource_provider:
@@ -70,6 +70,6 @@ services:
     contao.web_profiler.data_collector:
         class: Contao\CoreBundle\DataCollector\ContaoDataCollector
         arguments:
-            - '%kernel.packages%'
+            - '%kernel.packages%' # FIXME: missing parameter
         tags:
             - { name: data_collector, template: "ContaoCoreBundle:Collector:contao", id: "contao" }
