--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -47,7 +47,7 @@ services:
         class: Contao\CoreBundle\Config\FileLocator
         public: false
         arguments:
-            - "@kernel"
+            - "@kernel" # FIXME: kernel.bundles?
         tags:
             - { name: contao.resource_locator }
 
@@ -90,6 +90,6 @@ services:
     contao.web_profiler.data_collector:
         class: Contao\CoreBundle\DataCollector\ContaoDataCollector
         arguments:
-            - '%kernel.packages%' # FIXME: missing parameter
+            - '%kernel.packages%'
         tags:
             - { name: data_collector, template: "ContaoCoreBundle:Collector:contao", id: "contao" }
