[Core] Added factory to create the resource locator

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -46,8 +46,9 @@ services:
     contao.resource_locator.bundles:
         class: Contao\CoreBundle\Config\FileLocator
         public: false
+        factory: [Contao\CoreBundle\Config\FileLocator, createFromKernelBundles]
         arguments:
-            - "@kernel" # FIXME: kernel.bundles?
+            - "@kernel"
         tags:
             - { name: contao.resource_locator }
 
