--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -11,7 +11,7 @@ services:
         tags:
             # Priority must be higher than any other listener that uses the Contao framework and lower than the
             # priority of the route_listener, which defaults to 32.
-            - { name: kernel.event_listener, event: kernel.controller, method: onKernelRequest, priority: 30 }
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: 30 }
             - { name: kernel.event_listener, event: kernel.finish_request, method: onKernelFinishRequest, priority: -254 }
 
     contao.listener.initialize_system:
