--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -42,6 +42,8 @@ services:
         arguments:
             - "@session"
         tags:
+            # Priority must be lower than Symfony\Bundle\FrameworkBundle\EventListener\SessionListener (default 128)
+            # but higher than the one of the Contao initialize system listener.
             - { name: kernel.event_listener, event: kernel.request, method: registerContaoAttributeBags, priority: 64 }
             - { name: kernel.event_listener, event: console.command, method: registerContaoAttributeBags, priority: 64 }
 
