[Core] Add the FileLocatorFactoryInterface and the StrictFileLoader classes

--- a/core-bundle/src/Resources/config/services.yml
+++ b/core-bundle/src/Resources/config/services.yml
@@ -50,19 +50,20 @@ services:
         class: Contao\CoreBundle\Config\FileLocatorAggregate
         public: false
         arguments:
-            - ["@contao.resource_locator.factory"]
+            - ["@contao.resource_locator.bundles"]
         tags:
             - { name: contao.resource_locator }
 
-    contao.resource_locator.factory:
+    contao.resource_locator.bundles:
         class: Contao\CoreBundle\Config\FileLocatorFactory
         public: false
-        factory: [Contao\CoreBundle\Config\FileLocatorFactory, create]
+        factory: [Contao\CoreBundle\Config\FileLocatorFactory, createWithBundlePaths]
         arguments:
             - "@kernel"
 
     contao.resource_locator.cache:
-        class: Contao\CoreBundle\Config\CacheFileLocator
+        class: Contao\CoreBundle\Config\FileLocatorFactory
+        factory: [Contao\CoreBundle\Config\FileLocatorFactory, createWithCachePath]
         arguments:
             - '%kernel.cache_dir%/contao'
         tags:
